[iOS] Fix spacing between grid cell title and close button.

This Cl fixes the spacing between the grid cell title and the close
button. When setting a constant offset for a trailing anchor, a positive
constant results in the trailing anchor being further in the trailing
direction, so a negative constant is needed to ensure the trailing anchor is on
the leading side of the anchor it is constrained to.

Per UX, the offset between the label and the button is set to 4 points.

Bug: 862343
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I01fc0e927c281ea5b174af4126c7e44fd3fc4f7f
Reviewed-on: https://chromium-review.googlesource.com/1140316
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576145}
Former-commit-id: b531bc1adfc16456c3cff358f9239b418e456ae6